# mde-retro-workstation

./: .gitignore  LICENSE  README.md  install.sh
.claude/: CLAUDE.md  settings.json
.claude/hooks/: session-start.sh
.claude/skills/audit/: SKILL.md
.claude/skills/preview/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/ship/: SKILL.md
.githooks/: pre-commit
assets/: install-assets.sh  install-chicago95.sh  install-reactos-assets.sh
assets/greeter/: lightdm-gtk-greeter.conf  win10.css
assets/reference/: win2000-classic-colors.ini
docs/: COMPLIANCE.md  MACKES-WORKSTATION-PLAN.md  PROJECT_WORKLIST.md  ROADMAP-2.0.md
home/.config/fontconfig/: fonts.conf
home/.config/gtk-3.0/: settings.ini
home/.config/sway/: config
home/.config/sway/config.d/: mde-overrides.conf
home/.config/sway/resources/: 133-Win2k-2.2.2-1.tgz  windows2000.desktop
home/.config/sway/scripts/: control-panel.py  install-win2k-icons.py  start-mde-panel.sh  start-taskbar.sh  win2000-session.sh  win95-brightness.sh  win95-menu.py  win95-menu.sh  win95-power.sh  win95-start.sh
home/.config/waybar/: config.jsonc  style.css
home/.config/wofi/: config  style.css
rust/: .gitignore  ACCURACY.md  DEV-SETUP.md  LABWC-MIGRATION.md  PREVIEW.md  README.md  SPEC-rebrand.md  SPEC-system.md  SPEC-windows10.md  preview.sh
rust/assets/labwc/: autostart  menu.xml  rc.xml
rust/assets/labwc/Win2000-MDE/openbox-3/: themerc
rust/mde/: Cargo.toml
rust/mde-ui/src/: font.rs  lib.rs  metrics.rs  palette.rs
rust/mde-ui/src/widget/: button.rs  flag.rs  frame.rs  groupbox.rs  infoband.rs  mod.rs  tabs.rs
rust/mde-ui/tests/: checklist.rs
rust/mde/assets/licenses/: DroidSans-Apache-2.0.txt  NOTICE.md
rust/mde/skel/: mde-retro.desktop  mde-setup.desktop
rust/mde/skel/.config/gtk-4.0/: gtk.css
rust/mde/skel/.config/labwc/: autostart  menu.xml  rc.xml
rust/mde/skel/.config/labwc/scripts/: brightness.sh
rust/mde/skel/.config/sway/: config
rust/mde/src/: about.rs  action_center.rs  apps.rs  autoplay.rs  bluez.rs  browser.rs  browser_jumplist.rs  catalogue.rs  control_panel.rs  dialogs.rs  display.rs  fedora.rs  filedialog.rs  files.rs  greeter.rs  install.rs  installer.rs  keyboard.rs  main.rs  menu.rs  mount.rs  mouse.rs  net_flyout.rs  nm.rs  notifyd.rs  oobe.rs  outputs.rs  packages.rs  panel.rs  popup.rs  restore.rs  search.rs  security.rs  settings.rs  snip.rs  start_common.rs  start_win10.rs  state.rs  sway.rs  sysinfo.rs  (+8 more)
rust/tests/: stage-greeter-assets.sh  stage-rpm-assets.sh
rust/tests/accuracy/: capture.sh  checklist.toml  gallery.sh  nav-sweep.sh  nested-sway.conf  nested-sway.sh
