[package]
name = "mde"
description = "MDE-Retro: a Windows 2000 desktop shell for Sway (taskbar, Start menu, file manager, control panel)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mde"
path = "src/main.rs"

[dependencies]
mde-ui.workspace = true
iced.workspace = true
iced_layershell.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
# Accuracy harness (tests/accuracy.rs): decode grim PNG captures and parse the
# spot-check checklist. Both are pure-Rust and only pulled in for `cargo test`.
png = "0.17"
toml = "0.8"

# ---------------------------------------------------------------------------
# RPM packaging (cargo-generate-rpm). Build with:
#   cargo build --release && cargo generate-rpm -p mde
# The package ships CODE ONLY; `mde install --assets` fetches Chicago95 + Win2k
# on first run, so no third-party art is redistributed.
# ---------------------------------------------------------------------------
[package.metadata.generate-rpm]
summary = "Windows 2000 desktop shell for Sway (MDE-Retro)"
assets = [
    { source = "target/release/mde", dest = "/usr/bin/mde", mode = "0755" },
    # Symlinks so `mde-panel`, `mde-menu`, ... dispatch via argv[0].
    # (created in %post; see post_install_script below)
    { source = "../../README.md", dest = "/usr/share/doc/mde/README.md", mode = "0644", doc = true },
    # Asset *installer scripts* are code (decision #7): they fetch Chicago95 +
    # the Win2k icons from upstream at runtime. `mde install --assets` runs
    # these; no third-party asset bytes are shipped in the package.
    { source = "../../assets/install-assets.sh", dest = "/usr/share/mde/scripts/install-assets.sh", mode = "0755" },
    { source = "../../assets/install-chicago95.sh", dest = "/usr/share/mde/scripts/install-chicago95.sh", mode = "0755" },
]
# Runtime packages the shell actually drives (the CORE set the installer needs +
# the helpers the shell shells out to). Visual assets are fetched, not required.
requires = { sway = "*", swaybg = "*", foot = "*", grim = "*", wmenu = "*", "xdg-utils" = "*", NetworkManager = "*", greetd = "*", tuigreet = "*", pipewire = "*", wireplumber = "*", polkit = "*", "google-droid-sans-fonts" = "*", "xkeyboard-config" = "*" }
post_install_script = """
for c in panel menu files control-panel run setup install logoff shutdown; do
    ln -sf /usr/bin/mde /usr/bin/mde-$c
done
"""
post_uninstall_script = """
for c in panel menu files control-panel run setup install logoff shutdown; do
    rm -f /usr/bin/mde-$c
done
"""
