[package]
name = "mde"
description = "MDE-Retro: a Windows 2000 desktop shell for Sway (taskbar, Start menu, file manager, control panel)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mde"
path = "src/main.rs"

[dependencies]
mde-ui.workspace = true
iced.workspace = true
iced_layershell.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ratatui = "0.29"
crossterm = "0.28"
# System tray: be the StatusNotifierWatcher + Host so SNI apps (nm-applet, etc.)
# show their icons in the taskbar. The blocking zbus API runs on its own thread.
zbus = "4"
# Window management on labwc (and any wlroots compositor): the taskbar lists and
# controls toplevels via wlr-foreign-toplevel-management. Versions match those
# already locked via iced_layershell, so nothing new is fetched.
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[dev-dependencies]
# Accuracy harness (tests/accuracy.rs): decode grim PNG captures and parse the
# spot-check checklist. Both are pure-Rust and only pulled in for `cargo test`.
png = "0.17"
toml = "0.8"

# ---------------------------------------------------------------------------
# RPM packaging (cargo-generate-rpm). Build with:
#   cargo build --release
#   tests/stage-rpm-assets.sh          # stage the bundled theme into target/
#   cargo generate-rpm -p mde
# The package BUNDLES the primary Win2000 look (Win2k icons + Chicago95 cursors
# + sounds, ~7MB) for an offline install, plus the GPL-3 text + a provenance
# NOTICE. The 76MB Chicago95 icon FALLBACK is NOT bundled (size); `mde install
# --assets` still fetches it for full coverage. See assets/licenses/NOTICE.md —
# verify the Win2k KDE-Store theme's terms before public redistribution.
# ---------------------------------------------------------------------------
[package.metadata.generate-rpm]
summary = "Windows 2000 desktop shell for Sway (MDE-Retro)"
assets = [
    { source = "target/release/mde", dest = "/usr/bin/mde", mode = "0755" },
    # Symlinks so `mde-panel`, `mde-menu`, ... dispatch via argv[0].
    # (created in %post; see post_install_script below)
    { source = "../../README.md", dest = "/usr/share/doc/mde/README.md", mode = "0644", doc = true },
    # Asset *installer scripts* are code (decision #7): they fetch Chicago95 +
    # the Win2k icons from upstream at runtime. `mde install --assets` runs
    # these; no third-party asset bytes are shipped in the package.
    { source = "../../assets/install-assets.sh", dest = "/usr/share/mde/scripts/install-assets.sh", mode = "0755" },
    { source = "../../assets/install-chicago95.sh", dest = "/usr/share/mde/scripts/install-chicago95.sh", mode = "0755" },
    # Skel: the labwc config + Win2000 Openbox theme `mde setup` deploys to
    # /etc/skel + users (this is what launches the mde shell + draws the
    # Win2000 title bars). Code/config only; no third-party asset bytes.
    { source = "skel/.config/labwc/rc.xml", dest = "/usr/share/mde/skel/.config/labwc/rc.xml", mode = "0644" },
    { source = "skel/.config/labwc/autostart", dest = "/usr/share/mde/skel/.config/labwc/autostart", mode = "0755" },
    { source = "skel/.config/labwc/menu.xml", dest = "/usr/share/mde/skel/.config/labwc/menu.xml", mode = "0644" },
    { source = "skel/.local/share/themes/Win2000-MDE/openbox-3/themerc", dest = "/usr/share/mde/skel/.local/share/themes/Win2000-MDE/openbox-3/themerc", mode = "0644" },
    # The Wayland session entry the greeter lists.
    { source = "skel/mde-retro.desktop", dest = "/usr/share/wayland-sessions/mde-retro.desktop", mode = "0644" },
    # --- Bundled third-party assets (staged into target/rpm-assets) ----------
    { source = "target/rpm-assets/icons/Win2k/**/*", dest = "/usr/share/icons/Win2k/", mode = "0644" },
    { source = "target/rpm-assets/icons/Haiku/**/*", dest = "/usr/share/icons/Haiku/", mode = "0644" },
    { source = "assets/licenses/haiku-icons-MIT.txt", dest = "/usr/share/licenses/mde/haiku-icons-MIT.txt", mode = "0644", doc = true },
    { source = "assets/licenses/IBMPlexSans-OFL.txt", dest = "/usr/share/licenses/mde/IBMPlexSans-OFL.txt", mode = "0644", doc = true },
    # IBM Plex Sans (BeOS-theme UI font) for GTK/fontconfig apps, not just the shell.
    { source = "../mde-ui/fonts/IBMPlexSans-Regular.ttf", dest = "/usr/share/fonts/mde-ibm-plex-sans/IBMPlexSans-Regular.ttf", mode = "0644" },
    { source = "../mde-ui/fonts/IBMPlexSans-Bold.ttf", dest = "/usr/share/fonts/mde-ibm-plex-sans/IBMPlexSans-Bold.ttf", mode = "0644" },
    { source = "target/rpm-assets/icons/Chicago95_Standard_Cursors/**/*", dest = "/usr/share/icons/Chicago95_Standard_Cursors/", mode = "0644" },
    { source = "target/rpm-assets/sounds/Chicago95/**/*", dest = "/usr/share/sounds/Chicago95/", mode = "0644" },
    # GPL-3 text + provenance NOTICE for the bundled art (license compliance).
    { source = "assets/licenses/GPL-3.0.txt", dest = "/usr/share/licenses/mde/GPL-3.0.txt", mode = "0644", doc = true },
    { source = "assets/licenses/NOTICE.md", dest = "/usr/share/licenses/mde/NOTICE.md", mode = "0644", doc = true },
]
# Runtime packages the shell actually drives. `requires` = the CORE session +
# every app the shell launches directly from its own menus / taskbar (so nothing
# the UI offers is ever missing). `recommends` = the Control Panel's catalogue of
# system tools — pulled in by default on a normal install (dnf honours Recommends)
# but removable, matching "listed in the Control Panel". Visual assets are fetched.
requires = { labwc = "*", "wlr-randr" = "*", wlopm = "*", swaybg = "*", swayidle = "*", swaylock = "*", foot = "*", grim = "*", "xdg-utils" = "*", brightnessctl = "*", NetworkManager = "*", greetd = "*", tuigreet = "*", pipewire = "*", wireplumber = "*", polkit = "*", "google-droid-sans-fonts" = "*", "xkeyboard-config" = "*", firefox = "*", terminator = "*", dnfdragora = "*", "nm-connection-editor" = "*", "system-config-printer" = "*", pavucontrol = "*", playerctl = "*" }
# Apps the Start menu / Control Panel list but that are optional, large, or
# install-on-click in the UI. dnf installs Recommends by default; they can be
# removed without removing mde.
recommends = { swayosd = "*", "blivet-gui" = "*", btop = "*", cockpit = "*", fastfetch = "*", "firewall-config" = "*", flatpak = "*", glances = "*", "gnome-abrt" = "*", "gnome-disk-utility" = "*", gparted = "*", htop = "*", "im-chooser" = "*", iotop = "*", iperf3 = "*", lm_sensors = "*", lynis = "*", mediawriter = "*", ncdu = "*", nmap = "*", nvtop = "*", powertop = "*", seahorse = "*", "setroubleshoot-server" = "*", smartmontools = "*", "system-config-language" = "*", timeshift = "*", wireshark = "*" }
post_install_script = """
for c in panel menu popup files control-panel system-properties about run properties setup install logoff shutdown; do
    ln -sf /usr/bin/mde /usr/bin/mde-$c
done
fc-cache -f /usr/share/fonts/mde-ibm-plex-sans >/dev/null 2>&1 || true
"""
post_uninstall_script = """
for c in panel menu popup files control-panel system-properties about run properties setup install logoff shutdown; do
    rm -f /usr/bin/mde-$c
done
"""
