[package]
name = "mde"
description = "MDE-Retro: a Windows 2000 desktop shell for Sway (taskbar, Start menu, file manager, control panel)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mde"
path = "src/main.rs"

[dependencies]
mde-ui.workspace = true
iced.workspace = true
iced_layershell.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ratatui = "0.29"
crossterm = "0.28"
# System tray: be the StatusNotifierWatcher + Host so SNI apps (nm-applet, etc.)
# show their icons in the taskbar. The blocking zbus API runs on its own thread.
zbus = "4"
# Window management on labwc (and any wlroots compositor): the taskbar lists and
# controls toplevels via wlr-foreign-toplevel-management. Versions match those
# already locked via iced_layershell, so nothing new is fetched.
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
# Virtual desktops on labwc (ext-workspace-v1, a stabilised staging protocol the
# compositor already advertises). Same wayland-rs stack as above; the `staging`
# feature is purely additive (it only turns on cfg already pulled transitively).
wayland-protocols = { version = "0.32", features = ["client", "staging"] }

[dev-dependencies]
# Accuracy harness (tests/accuracy.rs): decode grim PNG captures and parse the
# spot-check checklist. Both are pure-Rust and only pulled in for `cargo test`.
png = "0.17"
toml = "0.8"

# ---------------------------------------------------------------------------
# RPM packaging (cargo-generate-rpm). Build with:
#   cargo build --release
#   tests/stage-rpm-assets.sh          # stage the bundled theme into target/
#   cargo generate-rpm -p mde
# The package BUNDLES the primary Win2000 look (Win2k icons + Chicago95 cursors
# + sounds, ~7MB) for an offline install, plus the GPL-3 text + a provenance
# NOTICE. The 76MB Chicago95 icon FALLBACK is NOT bundled (size); `mde install
# --assets` still fetches it for full coverage. See assets/licenses/NOTICE.md —
# verify the Win2k KDE-Store theme's terms before public redistribution.
# ---------------------------------------------------------------------------
[package.metadata.generate-rpm]
summary = "Windows 2000 desktop shell for Sway (MDE-Retro)"
# Package release — bump on packaging/asset changes that reuse the same crate
# version, so `dnf upgrade` sees a newer NEVRA. r2: RPM auto-activates branding
# via a %posttrans one-shot; LightDM login uses gtk-greeter (web greeter dropped).
# r3: first-login Setup auto-launch + Start-menu/Programs entry; setup is now
# marker-aware so it won't re-brand or flip the DM back to greetd.
# r4: unified package catalogue (incl. Xen/XCP-ng guest tools) + Choose-Components
# selector in both the TUI and GUI installers; Control Panel greys missing tools.
# r5: fix boot splash never applying — mde-retro is a SCRIPTED Plymouth theme, so
# it needs plymouth-plugin-script (/usr/lib64/plymouth/script.so); added to
# requires + install-branding.sh now installs it before setting the theme. Also
# fixed the os-release backup (cp -aL) so revert restores it.
release = "5"
assets = [
    { source = "target/release/mde", dest = "/usr/bin/mde", mode = "0755" },
    # Symlinks so `mde-panel`, `mde-menu`, ... dispatch via argv[0].
    # (created in %post; see post_install_script below)
    { source = "../../README.md", dest = "/usr/share/doc/mde/README.md", mode = "0644", doc = true },
    # Asset *installer scripts* are code (decision #7): they fetch Chicago95 +
    # the Win2k icons from upstream at runtime. `mde install --assets` runs
    # these; no third-party asset bytes are shipped in the package.
    { source = "../../assets/install-assets.sh", dest = "/usr/share/mde/scripts/install-assets.sh", mode = "0755" },
    { source = "../../assets/install-chicago95.sh", dest = "/usr/share/mde/scripts/install-chicago95.sh", mode = "0755" },
    # Skel: the labwc config + Win2000 Openbox theme `mde setup` deploys to
    # /etc/skel + users (this is what launches the mde shell + draws the
    # Win2000 title bars). Code/config only; no third-party asset bytes.
    { source = "skel/.config/labwc/rc.xml", dest = "/usr/share/mde/skel/.config/labwc/rc.xml", mode = "0644" },
    { source = "skel/.config/labwc/autostart", dest = "/usr/share/mde/skel/.config/labwc/autostart", mode = "0755" },
    { source = "skel/.config/labwc/menu.xml", dest = "/usr/share/mde/skel/.config/labwc/menu.xml", mode = "0644" },
    { source = "skel/.local/share/themes/Win2000-MDE/openbox-3/themerc", dest = "/usr/share/mde/skel/.local/share/themes/Win2000-MDE/openbox-3/themerc", mode = "0644" },
    # The Wayland session entry the greeter lists.
    { source = "skel/mde-retro.desktop", dest = "/usr/share/wayland-sessions/mde-retro.desktop", mode = "0644" },
    # "Set Up MDE-Retro" launcher: shows in Start ▸ Programs (apps.rs reads
    # /usr/share/applications) and any app launcher; also run from the desktop
    # menu (menu.xml) and auto-launched once on first login (skel autostart).
    { source = "skel/mde-setup.desktop", dest = "/usr/share/applications/mde-setup.desktop", mode = "0644" },
    # Rebrand assets + scripts: Plymouth/GRUB/LightDM themes, logos, wallpaper,
    # os-release/issue/fastfetch content, install-/revert-branding.sh. The setup
    # step runs install-branding.sh from here (invoked via `bash`, no +x needed).
    { source = "../assets/branding/**/*", dest = "/usr/share/mde/branding/", mode = "0644" },
    # One-shot branding activator. Ships disabled; %posttrans enables it. On the
    # next boot it runs install-branding.sh once (network up, no dnf lock held),
    # then the /var/lib/mde-branding/.activated marker self-disables it so it
    # never re-fires on upgrades. Keeps the initramfs rebuild + DM switch OUT of
    # the rpm transaction (the unsafe way). See post_trans_script below.
    { source = "../assets/systemd/mde-activate-branding.service", dest = "/usr/lib/systemd/system/mde-activate-branding.service", mode = "0644" },
    # --- Bundled third-party assets (staged into target/rpm-assets) ----------
    { source = "target/rpm-assets/icons/Win2k/**/*", dest = "/usr/share/icons/Win2k/", mode = "0644" },
    { source = "target/rpm-assets/icons/Haiku/**/*", dest = "/usr/share/icons/Haiku/", mode = "0644" },
    { source = "assets/licenses/haiku-icons-MIT.txt", dest = "/usr/share/licenses/mde/haiku-icons-MIT.txt", mode = "0644", doc = true },
    { source = "assets/licenses/IBMPlexSans-OFL.txt", dest = "/usr/share/licenses/mde/IBMPlexSans-OFL.txt", mode = "0644", doc = true },
    # IBM Plex Sans (BeOS-theme UI font) for GTK/fontconfig apps, not just the shell.
    { source = "../mde-ui/fonts/IBMPlexSans-Regular.ttf", dest = "/usr/share/fonts/mde-ibm-plex-sans/IBMPlexSans-Regular.ttf", mode = "0644" },
    { source = "../mde-ui/fonts/IBMPlexSans-Bold.ttf", dest = "/usr/share/fonts/mde-ibm-plex-sans/IBMPlexSans-Bold.ttf", mode = "0644" },
    { source = "target/rpm-assets/icons/Chicago95_Standard_Cursors/**/*", dest = "/usr/share/icons/Chicago95_Standard_Cursors/", mode = "0644" },
    { source = "target/rpm-assets/sounds/Chicago95/**/*", dest = "/usr/share/sounds/Chicago95/", mode = "0644" },
    # GPL-3 text + provenance NOTICE for the bundled art (license compliance).
    { source = "assets/licenses/GPL-3.0.txt", dest = "/usr/share/licenses/mde/GPL-3.0.txt", mode = "0644", doc = true },
    # Droid Sans (Win2000-theme UI font, Apache-2.0) embedded in the binary.
    { source = "assets/licenses/DroidSans-Apache-2.0.txt", dest = "/usr/share/licenses/mde/DroidSans-Apache-2.0.txt", mode = "0644", doc = true },
    { source = "assets/licenses/NOTICE.md", dest = "/usr/share/licenses/mde/NOTICE.md", mode = "0644", doc = true },
]
# Runtime packages the shell actually drives. `requires` = the CORE session +
# every app the shell launches directly from its own menus / taskbar (so nothing
# the UI offers is ever missing). `recommends` = the Control Panel's catalogue of
# system tools — pulled in by default on a normal install (dnf honours Recommends)
# but removable, matching "listed in the Control Panel". Visual assets are fetched.
requires = { labwc = "*", "wlr-randr" = "*", wlopm = "*", swaybg = "*", swayidle = "*", swaylock = "*", foot = "*", grim = "*", "xdg-utils" = "*", brightnessctl = "*", NetworkManager = "*", greetd = "*", tuigreet = "*", lightdm = "*", "lightdm-gtk-greeter" = "*", "plymouth-plugin-script" = "*", pipewire = "*", wireplumber = "*", polkit = "*", "google-droid-sans-fonts" = "*", "xkeyboard-config" = "*", firefox = "*", terminator = "*", dnfdragora = "*", "nm-connection-editor" = "*", "system-config-printer" = "*", pavucontrol = "*", playerctl = "*" }
# Apps the Start menu / Control Panel list but that are optional, large, or
# install-on-click in the UI. dnf installs Recommends by default; they can be
# removed without removing mde.
recommends = { swayosd = "*", "blivet-gui" = "*", btop = "*", cockpit = "*", fastfetch = "*", "firewall-config" = "*", flatpak = "*", glances = "*", "gnome-abrt" = "*", "gnome-disk-utility" = "*", gparted = "*", htop = "*", "im-chooser" = "*", iotop = "*", iperf3 = "*", lm_sensors = "*", lynis = "*", mediawriter = "*", ncdu = "*", nmap = "*", nvtop = "*", powertop = "*", seahorse = "*", "setroubleshoot-server" = "*", smartmontools = "*", "system-config-language" = "*", timeshift = "*", wireshark = "*" }
post_install_script = """
for c in panel menu start-win10 action-center toast task-view search settings popup files mount control-panel system-properties display filedialog taskbar-properties about run properties setup install logoff shutdown lock; do
    ln -sf /usr/bin/mde /usr/bin/mde-$c
done
fc-cache -f /usr/share/fonts/mde-ibm-plex-sans >/dev/null 2>&1 || true
"""
# %posttrans runs ONCE after the whole transaction, after dnf releases its lock —
# the only safe place to arm boot-time activation. It just enables the one-shot;
# the heavy work (dnf greeter install, plymouth -R initramfs rebuild, greetd->
# lightdm switch) is deferred to that unit on next boot, never run inline here.
post_trans_script = """
systemctl daemon-reload >/dev/null 2>&1 || true
systemctl enable mde-activate-branding.service >/dev/null 2>&1 || true
"""
post_uninstall_script = """
for c in panel menu start-win10 action-center toast task-view search settings popup files mount control-panel system-properties display filedialog taskbar-properties about run properties setup install logoff shutdown lock; do
    rm -f /usr/bin/mde-$c
done
# On full erase ($1 == 0), not upgrade, drop the one-shot's enable symlink. (The
# unit file itself is package-owned and removed by rpm; this clears the wants/.)
if [ "$1" = 0 ]; then
    systemctl disable mde-activate-branding.service >/dev/null 2>&1 || true
fi
"""
